# bma-standard-formulas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: BMA_Calcs2.txt  BMA_FORMULAS.md  Single Mortgage Amortizaiton.xlsm  notation_reference.md
docs/bma_sections/: BMA_sections.txt  SF-10.txt  SF-11.txt  SF-12.txt  SF-13.txt  SF-14.txt  SF-15.txt  SF-16.txt  SF-17.txt  SF-18.txt  SF-19.txt  SF-2.txt  SF-20.txt  SF-21.txt  SF-22.txt  SF-23.txt  SF-24.txt  SF-25.txt  SF-26.txt  SF-27.txt  SF-28.txt  SF-29.txt  SF-3.txt  SF-30.txt  SF-31.txt  SF-32.txt  SF-33.txt  SF-34.txt  SF-35.txt  SF-36.txt  SF-37.txt  SF-38.txt  SF-39.txt  SF-4.txt  SF-40.txt  SF-41.txt  SF-42.txt  SF-43.txt  SF-44.txt  SF-45.txt  (+17 more)
docs/examples/: Two Pool CPR.xlsx
notebooks/: BMA_Examples_Walkthrough.ipynb  ReadMeExamples.ipynb
src/bma_standard_formulas/: __init__.py  cashflows.py  examples.py  payment_models.py  scheduled_payments.py
tests/: README_TEST_ORGANIZATION.md  __init__.py  test_b1_payments.py  test_b2_prepayment.py  test_b3_historical_speeds.py  test_b4_abs_prepayment.py  test_c3_cashflows.py  test_c3b1_consistency.py  test_examples_verification.py  test_suite.py  utilities.py
tests/fixtures/: 1m_PSAtoSMM_conversion.csv  bma_cashflow_a.csv  bma_cashflow_b.csv  bma_prepay_rate_conversion_table.csv  cumulative_default_matrix.csv
tests/fixtures/verification/: verify_bma_cashflow_a.py  verify_bma_cashflow_b.py  verify_prepay_table_sf9.py  verify_psa_table_sf10.py
